--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 
-<h2>Hola mundo </h2>
-<router-outlet></router-outlet>
+<div class="menu">
+  <a [routerLink]="['/clientes']" > Clientes</a>
+  <a routerLink="/proyectos" > Proyectos</a>
+</div>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
