--- a/src/app/pages/customers/customers.component.html
+++ b/src/app/pages/customers/customers.component.html
@@ -1,1 +1,9 @@
-<p>customers works!</p>
+<div class="customer-list">
+
+    <div class="customer-inline" *ngFor="let customer of customers">
+        <span>Nombre : {{customer.name}}</span>
+        <span>Apellidos : {{customer.lastName}}</span>
+        <span>Email : {{customer.email}}</span>
+    </div>
+
+</div>
