Servicio de proyectos y listado de proyectos en projectscomponente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
 <div class="menu">
   <a [routerLink]="['/clientes']" > Clientes</a>
   <a routerLink="/proyectos" > Proyectos</a>
+
+  Hola, son las {{date}}
+
 </div>
 <div class="container">
   <router-outlet></router-outlet>
