Página de detalles de proyecto enlazada. WIP, falta maquetar
Co-authored-by: BRYAN TAMAYO ABAD <bryan.tamayo101@alu.ulpgc.es>
Co-authored-by: Lau Sarmiento <laumsm93@gmail.com>
Co-authored-by: giova mederos <morenita_cnters@hotmail.com>

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -3,11 +3,11 @@
 
     <button  (click)="crear()">Crear</button>
 
-    <div  class="project-inline" *ngFor="let project of projects">
+
+    <p  class="project-inline" *ngFor="let project of projects">
+        <span>id : {{project._id}} </span>
         <span>Título proyecto : {{project.title + '    '}} </span>
-        <span>Nombre cliente : {{project.customer.name + '    '}} </span>
-        <span>Email cliente : {{project.customer.email + '    '}} </span>
-        
-    </div>
+        <button [routerLink]="['/proyectos',  project._id]"   >Ver detalles</button>
+    </p>
 
 </div>
